[#82042730], [#82273622] Страница редактирования текстовых страниц. Вынес все z-index'ы в переменные в _variables.sass

--- a/app/adm-categories-static.haml
+++ b/app/adm-categories-static.haml
@@ -74,7 +74,7 @@
                         %span
                           Редактировать
                     .adm-categories-item{class: '__edit'}
-                      %input.adm-categories-item-field{type: 'text', :value => "Велозапчасти"}
+                      %input.adm-categories-item-field{type: 'text', value: 'Велозапчасти'}
                       %span.adm-categories-item-remove
                     .adm-categories-item
                       %span.adm-categories-item-name Распродажа
