--- a/app/stylesheets/sass/bundle.scss
+++ b/app/stylesheets/sass/bundle.scss
@@ -102,7 +102,6 @@
 @import "modules/orders";
 @import "modules/products";
 @import "modules/products-simple-form";
-@import "modules/popup-products";
 @import "modules/categories";
 @import "modules/typeahead";
 @import "modules/pagination";
@@ -118,3 +117,6 @@
 @import "modules/adm-orders";
 @import "modules/adm-order";
 @import "modules/adm-dashboard";
+@import "modules/adm-main-content";
+@import "modules/adm-subnav";
+@import "modules/adm-textpage";
