--- a/app/stylesheets/sass/modules/_adm-auth.sass
+++ b/app/stylesheets/sass/modules/_adm-auth.sass
@@ -4,7 +4,7 @@
   text-align: center
   color: #fff
   .adm-btn-auth-back
-    z-index: 2
+    z-index: $zindex-adm-btn-auth-back
   .container
     padding:
       top: 20px
@@ -39,7 +39,7 @@
   top: 55px
   right: 55px
   display: none
-  z-index: 10
+  z-index: $zindex-adm-auth-buttons
   button
     margin-left: 10px
 
