--- a/app/stylesheets/sass/modules/_adm-categories.sass
+++ b/app/stylesheets/sass/modules/_adm-categories.sass
@@ -80,7 +80,7 @@
     top: 0
     bottom: 0
     background-color: $line-color
-    z-index: 1
+    z-index: $zindex-adm-categories-col-divider
   &:first-child
     &:before
       display: none
@@ -142,7 +142,7 @@
     top: 50%
     right: -16px
     visibility: hidden
-    z-index: 20
+    z-index: $zindex-adm-categories-btn-edit-item
 
 .adm-categories-item-name
   @include inline-valign-middle
