--- a/app/stylesheets/sass/modules/_buttons.sass
+++ b/app/stylesheets/sass/modules/_buttons.sass
@@ -222,6 +222,9 @@
 .adm-btn-edit-order-section
   @extend %adm-btn-edit-circle
 
+.adm-btn-edit-item
+  @extend %adm-btn-edit-circle
+
 // Button - Remove
 %adm-btn-remove
   @extend .btn
