--- a/app/stylesheets/sass/settings/_layout.sass
+++ b/app/stylesheets/sass/settings/_layout.sass
@@ -40,7 +40,7 @@ body
   width: $left-sidebar-width
   overflow:
     y: auto
-  z-index: $left-sidebar-z-index
+  z-index: $zindex-left-sidebar
 
 .app-main-content
   width: auto
@@ -57,7 +57,7 @@ body
   position: fixed
   top: 0
   right: 0
-  z-index: $header-navbar-z-index
+  z-index: $zindex-header-navbar
   left: $left-sidebar-width
   height: $header-navbar-height
   @extend %block-padding
