--- a/app/stylesheets/sass/modules/_login.sass
+++ b/app/stylesheets/sass/modules/_login.sass
@@ -13,7 +13,7 @@ $login-logo-height: 37px
   width: 100%
   height: 100%
   overflow: auto
-  z-index: 10
+  z-index: $zindex-login-content-fullscreen
 
 .login__block
   display: inline-block
