Вынес все z-index'ы в отдельный файл

--- a/app/stylesheets/sass/bundle.scss
+++ b/app/stylesheets/sass/bundle.scss
@@ -14,6 +14,7 @@
 // Main Settings
 @import "settings/design";
 @import "settings/variables";
+@import "settings/zindexes";
 @import "settings/mixins";
 @import "settings/fonts";
 
