Цвета label для статуса товаров в выпадашке

--- a/app/stylesheets/sass/settings/_labels.sass
+++ b/app/stylesheets/sass/settings/_labels.sass
@@ -41,14 +41,14 @@ a.label
   @include label-variant($label-warning-bg)
 
 // Product
-.label-product-published
+.label.__published
   @include label-variant($label-success-bg)
 
-.label-product-unpublished
+.label.__unpublished
   @include label-variant($label-primary-bg)
 
-.label-product-has_errors
+.label.__has_errors
   @include label-variant($label-warning-bg)
 
-.label-product-archive
+.label.__archive
   @include label-variant($label-waiting-bg)
