--- a/app/stylesheets/sass/settings/_labels.sass
+++ b/app/stylesheets/sass/settings/_labels.sass
@@ -41,6 +41,9 @@ a.label
   @include label-variant($label-warning-bg)
 
 // Product
+.label.__any
+  @include label-variant($label-default-bg)
+
 .label.__published
   @include label-variant($label-success-bg)
 
