--- a/app/stylesheets/sass/settings/_labels.sass
+++ b/app/stylesheets/sass/settings/_labels.sass
@@ -43,6 +43,7 @@ a.label
 // Product
 .label.__any
   @include label-variant($label-default-bg)
+  color: black
 
 .label.__published
   @include label-variant($label-success-bg)
