--- a/app/adm-categories-static.haml
+++ b/app/adm-categories-static.haml
@@ -11,7 +11,7 @@
     .adm-layout
       +include './app/shared/_layout_sidebar.haml'
 
-      - filter_product_states = {new: {slug: 'published', title: 'Опубликованные'}, delivery: {slug: 'unpublished', title: 'В подготовке'}, cancelled: {slug: 'has_errors', title: 'С ошибками'}, paused: {slug: 'archive', title: 'Архив'}}
+      - filter_product_states = {any: {slug: 'any', title: 'Все товары'}, published: {slug: 'published', title: 'Опубликованные'}, unpublished: {slug: 'unpublished', title: 'В подготовке'}, has_errors: {slug: 'has_errors', title: 'С ошибками'}, archive: {slug: 'archive', title: 'Архив'}}
 
       / Layout Main
       .adm-layout-main
