--- a/app/stylesheets/sass/settings/_labels.sass
+++ b/app/stylesheets/sass/settings/_labels.sass
@@ -42,8 +42,7 @@ a.label
 
 // Product
 .label.__any
-  @include label-variant($label-default-bg)
-  color: black
+  @include label-variant($gray)
 
 .label.__published
   @include label-variant($label-success-bg)
