[#82715200] новый цвет ссылок

--- a/app/stylesheets/sass/modules/_adm-order.sass
+++ b/app/stylesheets/sass/modules/_adm-order.sass
@@ -120,6 +120,10 @@
   margin-bottom: 0
   font-size: $font-size-base
   line-height: $line-height-base
+  a
+    color: $text-color
+    &:hover
+      color: $link-color-hover
   h4
     margin: 0
     font-weight: bold
