--- a/app/stylesheets/sass/modules/_adm-subnav.sass
+++ b/app/stylesheets/sass/modules/_adm-subnav.sass
@@ -38,6 +38,9 @@
     visibility: hidden
     z-index: $zindex-adm-subnav-btn-edit-item
 
+.adm-subnav-item-link
+  color: $text-color
+
 .adm-subnav-item-content
   padding: $adm-subnav-item-vertical-padding $adm-subnav-item-horizontal-padding
   display: block
