--- a/app/stylesheets/sass/settings/_variables.sass
+++ b/app/stylesheets/sass/settings/_variables.sass
@@ -34,7 +34,7 @@ $text-color-lighter: lighten($text-color, 20%)
 
 $headings-color: $text-color
 
-$link-color: $text-color
+$link-color: #7f7f7f
 $link-color-hover: $blue
 $link-hover-color: $link-color-hover
 $link-color-hover-light: lighten($link-color-hover, 30%)
