Update product item click

--- a/app/stylesheets/sass/modules/_adm-categories.sass
+++ b/app/stylesheets/sass/modules/_adm-categories.sass
@@ -214,6 +214,9 @@
   .label
     display: block
 
+.adm-categories-goods-item
+  cursor: pointer
+
 .adm-categories-goods-cover
   width: 50px
   padding-right: 16px
