Dragging multiple products simultaneously [deliver #82651354]

--- a/app/stylesheets/sass/modules/_adm-categories.sass
+++ b/app/stylesheets/sass/modules/_adm-categories.sass
@@ -217,6 +217,9 @@
 .adm-categories-goods-item
   cursor: pointer
 
+  &.__selected
+    background-color: lighten($adm-categories-item-active-bg, 30%)
+
 .adm-categories-goods-cover
   width: 50px
   padding-right: 16px
