Displaying total items quantity [deliver #83059744]

--- a/app/stylesheets/sass/modules/_adm-categories.sass
+++ b/app/stylesheets/sass/modules/_adm-categories.sass
@@ -220,6 +220,12 @@
   &.__selected
     background-color: lighten($adm-categories-item-active-bg, 30%)
 
+.adm-categories-goods-total-quantity
+  display: block
+  color: grey
+  font-size: 10px
+  text-align: center
+
 .adm-categories-goods-modifications
   list-style: none
   padding-left: 0
@@ -238,6 +244,7 @@
 
 .adm-categories-goods-price
   width: 100px
+  text-align: center
 
 // Дрэг-хэлпер (app/scripts/react/components/operator-products/list_row_drag_helper.js.jsx.coffee)
 .adm-categories-goods-draghelper
