Categories routing and small product css fixes [deliver #83026856]

--- a/app/stylesheets/sass/modules/_adm-categories.sass
+++ b/app/stylesheets/sass/modules/_adm-categories.sass
@@ -216,6 +216,7 @@
 
 .adm-categories-goods-item
   cursor: pointer
+  vertical-align: top
 
   &.__selected
     background-color: lighten($adm-categories-item-active-bg, 30%)
@@ -227,12 +228,15 @@
   text-align: center
 
 .adm-categories-goods-modifications
+  line-height: 12px
   list-style: none
   padding-left: 0
   color: grey
   font-size: 10px
 
 .adm-categories-goods-modifications-item
+  padding: 2.5px 0
+
   &.__not-synced
     color: red
 
