--- a/app/adm-categories.haml
+++ b/app/adm-categories.haml
@@ -43,7 +43,7 @@
                   %form.adm-categories-search-form{action: '?'}
                     %input.adm-categories-search-field.form-control{type: 'text', placeholder: 'Поиск по товарам'}
             .adm-categories-body
-              %div(data-react-class="OperatorCategories")
+              %div(data-react-class="OperatorCategories" data-react-props='{"categoryId": 170}')
           / end Categories
       / end Layout Main
     / end Layout
