--- a/app/stylesheets/sass/modules/_products.sass
+++ b/app/stylesheets/sass/modules/_products.sass
@@ -166,6 +166,13 @@ $products-form-images-list-padding: 12px
   border: 1px solid $gray-lighter
   +transition(opacity 0.2s ease)
 
+.products__new-form-image-thumb-preload
+  position: absolute
+  top: 50%
+  left: 50%
+  margin-top: -1em
+  margin-left: -1em
+
 .products__new-form-image-thumb-empty
   @extend .products__new-form-image-thumb
   padding-bottom: 97%
