Add new product button [deliver #83120008]

--- a/app/stylesheets/sass/modules/_adm-categories.sass
+++ b/app/stylesheets/sass/modules/_adm-categories.sass
@@ -190,7 +190,7 @@
 // Table with goods
 .adm-categories-goods
   @include flexible-table
-  margin-bottom: 20px
+  margin-top: 20px
   tr
     td
       &:last-of-type
