Save button disabling

--- a/app/adm-edit-product-react.haml
+++ b/app/adm-edit-product-react.haml
@@ -118,7 +118,7 @@
                         .form-group-sm
                           %input.form-control{type: "text", placeholder: '11 грамм'}
               %footer.adm-form-item-footer
-                %button.adm-btn-submit{"data-disable-with" => "Сохраняем...", :type => "submit"}
+                %button.adm-btn-submit{"data-disable-with" => "Сохраняем...", "data-button-save" => "true", :type => "submit"}
                   Сохранить
                 %button.adm-btn-remove
                   Удалить товар навсегда
