Displaying message when image loading error occured

--- a/app/stylesheets/sass/modules/_products.sass
+++ b/app/stylesheets/sass/modules/_products.sass
@@ -174,6 +174,16 @@ $products-form-images-list-padding: 12px
   margin-top: -1em
   margin-left: -1em
 
+.products__new-form-image-thumb-error
+  position: absolute
+  top: 50%
+  left: 50%
+  width: 100%
+  color: $white
+  text-align: center
+  margin-right: -50%
+  transform: translate(-50%, -50%)
+
 .products__new-form-image-thumb-empty
   @extend .products__new-form-image-thumb
   padding-bottom: 97%
