--- a/app/stylesheets/sass/modules/_adm-textpage.sass
+++ b/app/stylesheets/sass/modules/_adm-textpage.sass
@@ -26,3 +26,6 @@
     left: 0
     font-style: normal !important
     color: #d0d0d0
+
+.form-control.medium-editor
+  @extend textarea.form-control
