Add product & category styles

--- a/app/stylesheets/sass/modules/_adm-categories.sass
+++ b/app/stylesheets/sass/modules/_adm-categories.sass
@@ -94,6 +94,9 @@
 .adm-categories-content
   padding: 28px
 
+.adm-categories-content-empty
+  margin-top: 15px
+
 // Category
 .adm-categories-item
   margin-right: -1px
