--- a/app/stylesheets/sass/modules/_adm-textpage.sass
+++ b/app/stylesheets/sass/modules/_adm-textpage.sass
@@ -6,16 +6,34 @@
     bottom: 20px
     right: 20px
 
+.adm-subnav-list-textpage
+  .adm-subnav-item.muted
+    background: #eee
+    a
+      color: #999
+
+.adm-btn-remove-item
+  background-image: url('#{$images-path}/adm-icon-trash-gray.png')
+
 .adm-textpage-title
   min-height: 1.2em
   margin-bottom: 0.25em
   font-size: 32px
   line-height: 1.2
+  padding-left: 0
+  outline: none !important
+  border: 0 !important
+  +placeholder(#d0d0d0)
+  +box-shadow(none !important)
 
 .adm-textpage-content
-  min-height: $line-height-base + em
+  min-height: 82px
   font-size: 18px
   line-height: $line-height-base
+  padding: 0
+  outline: none !important
+  border: 0 !important
+  +box-shadow(none !important)
 
 .medium-editor-placeholder
   position: relative
