--- a/app/adm-edit-product-react.haml
+++ b/app/adm-edit-product-react.haml
@@ -23,7 +23,7 @@
                   .col-md-4
                     %h1.adm-section-header-title Добавить товар
                   .col-md-8
-                    %div( data-react-class="ProductStatusToggle" data-react-props='{"product_id": 1924, "state": "published", "manual_state": 0}')
+                    %div( data-react-class="StatusToggle" data-react-props='{"titleOn": "Товар на сайте", "titleOff": "Скрыть товар",  "url": "http://wannabemoscow.3001.vkontraste.ru/api/v1/operator/products/4196", "method": "PUT", "fieldName": "is_manual_published", "currentValue": true}')
                 %hr
               .row
                 .col-md-10
