--- a/app/products_new.haml
+++ b/app/products_new.haml
@@ -36,7 +36,7 @@
               .row
                 .col-md-8
                   .form-group
-                    %div( data-react-class="ProductStatusToggle", data-react-props='{"product_id": 123}' )
+                    %div( data-react-class="StatusToggle", data-react-props='{"product_id": 123}' )
                   .form-alert.form-alert-danger
                     Невозможно опубликовать товар. Проверьте поля, выделенные красным
                   .form-group
