--- a/app/stylesheets/sass/settings/_variables.sass
+++ b/app/stylesheets/sass/settings/_variables.sass
@@ -136,6 +136,9 @@ $label-success-bg: $brand-success
 $label-warning-bg: $brand-warning
 $label-waiting-bg: $brand-waiting
 
+// Layout
+$adm-layout-max-width: 1600px;
+
 // Dropdown
 $amd-dropdown-popup-width: 220px
 
