[#86516996] Добавлена иконка для промокодов

--- a/app/stylesheets/sass/modules/_adm-dashboard.sass
+++ b/app/stylesheets/sass/modules/_adm-dashboard.sass
@@ -30,7 +30,7 @@
   color: $text-color
 
 .adm-dashboard-item-icon
-  @include adm-icon
+  @extend %adm-icon
   width: 84px
   height: 84px
   margin-bottom: 15px
