--- a/app/shared/_layout_sidebar.haml
+++ b/app/shared/_layout_sidebar.haml
@@ -3,7 +3,7 @@
   / Sidebar Nav
   %nav.adm-sidebar-nav
     %ul.adm-sidebar-nav-list
-      - links = [{slug: 'shop', icon: 'adm-sidebar-nav-icon adm-icon-panel', title: 'Магазин Wannabe', href: '#todo'}, {slug: 'info', icon: 'adm-sidebar-nav-icon adm-icon-question-mark', title: 'Дешборд', href: 'adm-dashboard.html'}, {slug: 'categories', icon: 'adm-sidebar-nav-icon adm-icon-folder', title: 'Категории', href: 'adm-categories.html'}, {slug: 'orders', icon: 'adm-sidebar-nav-icon adm-icon-basket', title: 'Заказы', href: 'adm-orders-list.html'}, {slug: 'settings', icon: 'adm-sidebar-nav-icon adm-icon-layers', title: 'Страницы', href: 'adm-textpages.html'}, {slug: 'settings', icon: 'adm-sidebar-nav-icon adm-icon-cogwheel', title: 'Настройки', href: '#todo'}]
+      - links = [{slug: 'shop', icon: 'adm-icon-panel', title: 'Магазин Wannabe', href: '#todo'}, {slug: 'info', icon: 'adm-icon-question-mark', title: 'Дешборд', href: 'adm-dashboard.html'}, {slug: 'categories', icon: 'adm-icon-folder', title: 'Категории', href: 'adm-categories.html'}, {slug: 'orders', icon: 'adm-icon-basket', title: 'Заказы', href: 'adm-orders-list.html'}, {slug: 'promocodes', icon: 'adm-icon-gift', title: 'Промокоды', href: '#'}, {slug: 'settings', icon: 'adm-icon-layers', title: 'Страницы', href: 'adm-textpages.html'}, {slug: 'settings', icon: 'adm-icon-cogwheel', title: 'Настройки', href: '#todo'}]
       - for l of links
         - l = links[l]
         - li_class = ''
@@ -11,7 +11,7 @@
           - li_class = 'selected'
         %li.adm-sidebar-nav-item{class: "#{li_class}"}
           %a.adm-sidebar-nav-link{href: "#{l.href}"}
-            %i{class: "#{l.icon}"}>
+            %i.adm-sidebar-nav-icon{class: "#{l.icon}"}>
             = l.title
         - if l.slug == 'shop'
           %li.adm-sidebar-nav-sep
