Rotating product images [deliver #87389278]

--- a/app/adm-edit-product-react.haml
+++ b/app/adm-edit-product-react.haml
@@ -31,7 +31,7 @@
                     Невозможно опубликовать товар. Проверьте поля, выделенные красным
                   .form-group
                     %label.control-label Фотографии
-                    %div( data-react-class="ProductImages" data-react-props='{"productId": 1924, "fieldName": "product[image_ids][]"}')
+                    %div( data-react-class="ProductImages" data-react-props='{"productId":19848,"productCardId":17137,"images":[{"url":"http://3001.vkontraste.ru/uploads/product_image/image/6210/image.png","id":6210}]}')
 
                   .form-group
                     %label.control-label Название товара
