--- a/app/adm-dashboard.haml
+++ b/app/adm-dashboard.haml
@@ -16,40 +16,63 @@
       / Layout Main
       .adm-layout-main
         .adm-layout-main-inner
-          / Section Header
-          %header.adm-section-header
-            %h1.adm-section-header-title Дешборд
-          / end Section Header
           / Dashboard
           %section.adm-dashboard
             %ul.adm-dashboard-list
+              %li.adm-dashboard-item>
+                %i.adm-dashboard-item-check
+                %h2.adm-dashboard-item-title
+                  Заполните основные настройки магазина
+                %p.adm-dashboard-item-text
+                  Минимальные данные, которые нужны для начала работы.
+              %li.adm-dashboard-item>
+                %i.adm-dashboard-item-check
+                %h2.adm-dashboard-item-title
+                  Загрузите логотип
+                %p.adm-dashboard-item-text
+                  Желательно, чтобы логотип был на прозрачном фоне, особенно, если вы планируете менять основной фон магазина
+              %li.adm-dashboard-item>
+                %i.adm-dashboard-item-check
+                %h2.adm-dashboard-item-title
+                  Добавьте первые товары
+                %p.adm-dashboard-item-text
+                  != 'Магазин без товаров выглядит не очень. У нас есть несколько способов добвления: <a href="#" title="вручную">вручную</a>, интеграция с сервисом <a href="#" title="Мой склад">Мой склад</a>, cинхронизация с <a href="#" title="Google Docs">Google Docs</a>.'
+              %li.adm-dashboard-item.__soon>
+                %i.adm-dashboard-item-check
+                %h2.adm-dashboard-item-title
+                  Скоро: быстрая настройка дизайна
+                %p.adm-dashboard-item-text
+                  Этот пункт специально мы сделали следующим после добавления товаров, так как дизайн удобнее настраивать когда в магазине добавлено хотя бы несколько товаров
+              %li.adm-dashboard-item>
+                %i.adm-dashboard-item-check
+                %h2.adm-dashboard-item-title
+                  Подключите прием платежей
+                %p.adm-dashboard-item-text
+                  Заполните данные, необходимые для регистрации в платежной системе Wallet One, мы зарегистрируем и активируем ваш аккаунт
+              %li.adm-dashboard-item>
+                %i.adm-dashboard-item-check
+                %h2.adm-dashboard-item-title
+                  Подключите и настройте доставку
+                %p.adm-dashboard-item-text
+                  Если ваш магазин в Москвы или Санкт-Петербурге, то вы можете подключить курьерскую доставку, которая работает по всей России. Для примера – доставка по Москве от 230 рублей.
               %li.adm-dashboard-item.__done>
-                %i.adm-dashboard-item-icon
-                %p
-                  %strong Зарегистрируйтесь
-                  %br и ответьте на несколько вопросов
+                %i.adm-dashboard-item-check
+                %h2.adm-dashboard-item-title
+                  Создайте текстовые страницы
+                %p.adm-dashboard-item-text
+                  Вы наверняка хотите рассказать о своем магазине, историю того как вы появились или создать отдельную страницу с контактами
               %li.adm-dashboard-item>
-                %a.adm-dashboard-item-link{href: '#todo', title: 'Добавьте товары, вручную или через инструменты импорта'}
-                  %i.adm-dashboard-item-icon
-                  %p
-                    %strong Добавьте товары,
-                    %br вручную или через инструменты импорта
+                %i.adm-dashboard-item-check
+                %h2.adm-dashboard-item-title
+                  Выгрузка в Яндекс.Маркет или Вконтакте
+                %p.adm-dashboard-item-text
+                  Если ваш магазин готов и настроен, вы можете выгрузить ваши товары в яндекс.маркет, чтобы увеличить аудиторию. Еще мы придумали классную штуку: синхронизировать товары с альбомами вконтакте в вашей группе.
               %li.adm-dashboard-item>
-                %a.adm-dashboard-item-link{href: '#todo', title: 'Подключите доставку. вручную или через инструменты импорта'}
-                  %i.adm-dashboard-item-icon
-                  %p
-                    %strong Подключите доставку.
-                    %br Мы сделали все возможное, чтобы доставка стала легким делом
-              %li.adm-dashboard-item>
-                %a.adm-dashboard-item-link{href: '#todo', title: 'Опубликуйте ссылку в соцсетях!'}
-                  %i.adm-dashboard-item-icon
-                  %p
-                    Опубликуйте ссылку в соцсетях!
-              %li.adm-dashboard-item>
-                %a.adm-dashboard-item-link{href: '#todo', title: 'Опубликуйте ссылку в соцсетях!'}
-                  %i.adm-dashboard-item-icon
-                  %p
-                    Опубликуйте ссылку в соцсетях!
+                %i.adm-dashboard-item-check
+                %h2.adm-dashboard-item-title
+                  Остались вопросы?
+                %p.adm-dashboard-item-text
+                  != 'Видите значок вопроса в правом нижнем углу? Пишите туда, или прямо на почту <a href="#" title="mailto:support@kiiiosk.ru">support@kiiiosk.ru</a> или звоните 8 (800)'
           / end Dashboard
       / end Layout Main
     / end Layout
