--- a/app/stylesheets/sass/modules/_adm-dashboard.sass
+++ b/app/stylesheets/sass/modules/_adm-dashboard.sass
@@ -1,56 +1,58 @@
 .adm-dashboard
-  padding: 44px 0
-  border-top: 1px solid $line-color
-  font-size: 16px
+  a
+    color: #1e71be
+
+    &:hover
+      color: #3f98ea
 
 .adm-dashboard-list
   @include list-style-none
-  @extend .row
-  margin:
-    right: -($grid-gutter-width/2)
-    left: -($grid-gutter-width/2)
+  padding: 20px 0
 
 .adm-dashboard-item
-  @extend .col-md-4
-  @extend .col-sm-6
-  padding-bottom: 30px
-  display: inline-block
-  float: none
-  vertical-align: top
-  p
-    margin: 0
-  &.__done
-    .adm-dashboard-item-icon
-      background-image: url('#{$images-path}/adm-icon-circle-tick-green.png')
-    p
-      text-decoration: line-through
+  @extend .clearfix
+  padding-left: 44px
 
-.adm-dashboard-item-link
-  display: block
-  color: $text-color
-
-.adm-dashboard-item-icon
-  @extend %adm-icon
-  width: 84px
-  height: 84px
-  margin-bottom: 15px
-  background-image: url('#{$images-path}/adm-icon-circle-tick.png')
-
-@media (max-width: $screen-xs-max)
-  .adm-dashboard
-    padding:
-      top: 0
-      bottom: 0
-    font-size: $font-size-base
-
-  .adm-dashboard-item
+  & + &
     padding-top: 20px
-    padding-bottom: 20px
-    display: block
-    border-top: 1px solid $line-color
-    &:first-child
-      border-top: none
 
-  .adm-dashboard-item-icon
-    width: 60px
-    height: 60px
+  &.__soon
+    color: #d7d7d7
+
+  &.__done
+    color: #d7d7d7
+    text-decoration: line-through
+
+    .adm-dashboard-item-check
+      &:before
+        content: ""
+        width: 24px
+        height: 18px
+        position: absolute
+        display: inline-block
+        top: -1px
+        left: 3px
+        background: url('#{$images-path}/adm-icon-tick-green.png')
+        background-size: cover
+
+.adm-dashboard-item-check
+  width: 28px
+  height: 28px
+  margin: 1px 0 0 -40px
+  position: relative
+  float: left
+  border: 3px solid #ccc
+  display: inline-block
+  border-radius: 50%
+
+.adm-dashboard-item-title
+  margin: 0 0 6px
+  font-weight: normal
+  font-size: 26px
+  line-height: 30px
+  color: inherit
+
+.adm-dashboard-item-text
+  max-width: 500px
+  font-size: 15px
+  line-height: 20px
