Ссылки заголовков в дешборде

--- a/app/stylesheets/sass/modules/_adm-dashboard.sass
+++ b/app/stylesheets/sass/modules/_adm-dashboard.sass
@@ -50,6 +50,8 @@
   font-size: 26px
   line-height: 30px
   color: inherit
+  a
+    +link-colors(#0f0f0f, lighten(#0f0f0f, 35%) !important)
 
 .adm-dashboard-item-text
   max-width: 500px
