--- a/app/stylesheets/sass/modules/_products-simple-form.sass
+++ b/app/stylesheets/sass/modules/_products-simple-form.sass
@@ -22,7 +22,7 @@
       @extend .plain-input__input
       @extend %plain-input__input--outline
       text-align: left
-    input.form-control,
+    .form-control,
     .btn.form-control,
     .form-control-fake
       display: inline-block
