Отключил марджины у пейджирования

--- a/app/stylesheets/sass/modules/_pagination.sass
+++ b/app/stylesheets/sass/modules/_pagination.sass
@@ -1,8 +1,10 @@
 ul.pagination
-  display: block
-  margin:
-    top: $grid-gutter-width*2
-    bottom: $grid-gutter-width*2
+  // Эти стили мешаются при обычной бустреповской верстке
+  // пейджирование начинает вылезать за рамки страницы
+  //display: block
+  //margin:
+    //top: $grid-gutter-width*2
+    //bottom: $grid-gutter-width*2
   li
     a
       border: none
